Add n tier architecture

--- a/CRMSystem.DataAccessLayer/CRMSystem.DataAccessLayer.csproj
+++ b/CRMSystem.DataAccessLayer/CRMSystem.DataAccessLayer.csproj
@@ -20,4 +20,14 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="EntityFramework\" />
+    <Folder Include="Abstract\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CRMSystem.EntityLayer\CRMSystem.EntityLayer.csproj" />
+  </ItemGroup>
+
 </Project>
