--- a/CRMSystemApi/appsettings.json
+++ b/CRMSystemApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Jwt": {
+    "Key": "YourSecretKeyForAuthenticationOfApplication",
+    "Issuer": "asdasdfsdagasdIssueracom"
+  },
   "ConnectionStrings": {
     "PostgreSQL": "User ID=postgres;Password=asdqwe1997;Host=localhost;Port=5432;Database=CRMSystem"
   },
